Fix [Jobs] Chips overflows table (#1303)

--- a/src/elements/TableLinkCell/tableLinkCell.scss
+++ b/src/elements/TableLinkCell/tableLinkCell.scss
@@ -6,7 +6,6 @@
     flex: 1;
     flex-wrap: wrap;
     align-items: center;
-    max-width: 200px;
 
     .item {
       &-name {
@@ -17,7 +16,6 @@
 
       &-tag {
         max-width: 150px;
-        margin-left: 10px;
 
         span {
           display: inline;
@@ -37,10 +35,18 @@
     font-size: 12px;
     font-family: Roboto, sans-serif;
     font-style: normal;
-    line-height: 14px;
+    line-height: 18px;
 
-    span:last-child {
-      margin-left: 10px;
+    & > span:not(:last-child) {
+      margin-right: 10px;
     }
+
+    span {
+      width: auto;
+    }
+  }
+
+  .status {
+    margin-right: 5px;
   }
 }
